--- a/app/assets/components/mixins/oj-utils.html
+++ b/app/assets/components/mixins/oj-utils.html
@@ -1,6 +1,6 @@
 <script>
 
-    window.Oj.Utils = {
+    window.Oj.utils = {
 
         indexOf: function(array, callback, thisObj) {
             for (var i=0; i<array.length; i++)
