--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -21,7 +21,7 @@
               <paper-icon-button icon=add></paper-icon-button>Add a comment about the whole document
             </paper-button>
           </div>
-          <stacked-pdf-reader src={{"/proxy?url="+paper.location}}
+          <stacked-pdf-reader src={{paper.location}}
                               annotations={{annotations}}
                               pageOffset={{pageOffset}}
                               loadProgress={{loadProgress}}
