Fix firebase issues when serving compiled js

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= stylesheet_link_tag    "application", media: "all", :'shim-shadowdom'=>'' %>
     <%= html_import_tag "application" %>
 
+    <script src="https://cdn.firebase.com/js/client/2.2.6/firebase.js"></script>
     <script charset="utf-8" src="http://vivin.net/pub/pdfjs/textlayerbuilder.js"></script>
     <script src='https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 
