Refactor users controller to be more rest like

--- a/app/assets/components/ui-elements/oj-user-lookup.html
+++ b/app/assets/components/ui-elements/oj-user-lookup.html
@@ -12,7 +12,7 @@
     </core-dropdown>
 
     <json-get  id=lookUpSearch
-               url='/users/name_lookup'
+               url='/user/lookup'
                on-success={{lookupSuccess}}
                ></json-get>
 
