Hide 'Papers you are editing' if you aren't an editor. Fixes #200

--- a/app/assets/components/oj-app.html
+++ b/app/assets/components/oj-app.html
@@ -26,7 +26,7 @@
               <a href="/#/review" target="_self"></a>
             </core-item>
 
-            <template if={{user}}>
+            <template if={{user.editor}}>
 
                 <core-item id=editing icon="speaker-notes" label="Papers You Are Editing" horizontal center layout>
                     <a href="/#/editing" target="_self"></a>
