Refactor routing code into separate components and use events for navigation

--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -1,4 +1,4 @@
-<polymer-element name="oj-review-page" attributes='paper_id user router'>
+<polymer-element name="oj-review-page" attributes='paper_id user'>
   <template>
 
     <oj-review-page-header
@@ -6,7 +6,6 @@
             user={{user}}
             paper={{paper}}
             annotations={{annotations}}
-            router={{router}}
             loadProgress={{loadProgress}}
             ></oj-review-page-header>
 
