--- a/app/assets/components/ui-elements/oj-editor-paper-controls.html
+++ b/app/assets/components/ui-elements/oj-editor-paper-controls.html
@@ -1,4 +1,4 @@
-<polymer-element name="oj-editor-paper-controls" attributes='paper router'>
+<polymer-element name="oj-editor-paper-controls" attributes='paper'>
   <template>
 
     <div flex layout horizontal>
