Force user to provide an e-mail address (Fixes #188)

--- a/app/assets/components/mixins/oj-utils.html
+++ b/app/assets/components/mixins/oj-utils.html
@@ -2,6 +2,9 @@
 
     window.Oj.utils = {
 
+        xEMAIL_REGEX: /^([^@\s]+)@((?:[-a-z0-9]+\.)+[a-z]{2,})$/i,
+        EMAIL_REGEX: /.+$/i,
+
         indexOf: function(array, callback, thisObj) {
             for (var i=0; i<array.length; i++)
                 if (callback.call(thisObj, array[i], i, array) )
