Fix email regex

--- a/app/assets/components/mixins/oj-utils.html
+++ b/app/assets/components/mixins/oj-utils.html
@@ -2,8 +2,7 @@
 
     window.Oj.utils = {
 
-        xEMAIL_REGEX: /^([^@\s]+)@((?:[-a-z0-9]+\.)+[a-z]{2,})$/i,
-        EMAIL_REGEX: /.+$/i,
+        EMAIL_REGEX: /^([^@\s]+)@((?:[-a-z0-9]+\.)+[a-z]{2,})$/i,
 
         indexOf: function(array, callback, thisObj) {
             for (var i=0; i<array.length; i++)
