--- a/app/assets/components/subpages/oj-settings-page.html
+++ b/app/assets/components/subpages/oj-settings-page.html
@@ -31,7 +31,7 @@
 
         </style>
 
-        <json-put id=update url="/user" on-success={{updateSuccess}} on-error={{updateError}}></json-put>
+        <json-put id=update url="/api/user" on-success={{updateSuccess}} on-error={{updateError}}></json-put>
 
     </template>
 
