--- a/app/assets/components/ui-elements/oj-user-login.html
+++ b/app/assets/components/ui-elements/oj-user-login.html
@@ -10,7 +10,7 @@
       <a class='link' href='/auth/orcid'>Sign In</a>
     </template>
 
-    <core-ajax auto url='/user' handleAs="json"  on-core-response={{isReady}}></core-ajax>
+    <core-ajax auto url='/api/user' handleAs="json"  on-core-response={{isReady}}></core-ajax>
 
     <style>
       a {
