Change website to use pushState instead of # url's

--- a/app/assets/components/oj-page-router.html
+++ b/app/assets/components/oj-page-router.html
@@ -2,7 +2,7 @@
     <template>
 
         <app-router id=router
-                    mode="auto|hash|pushstate"
+                    mode=pushstate
                     on-activate-route-start={{validateOrRedirectUser}}
                     on-before-data-binding={{bindExtraAttributes}}
                     >
