--- a/app/assets/components/ui-elements/oj-paper-collection.html
+++ b/app/assets/components/ui-elements/oj-paper-collection.html
@@ -37,7 +37,9 @@
     Polymer({
 
       selectPaper: function(e){
-        window.location = '/#/review/'+ e.detail.data.sha;
+          var url = '/review/'+ e.detail.data.sha;
+          console.log('go to paper', url);
+          this.fire('go', url);
       },
 
       filtered: function(array, key, desc) {
