--- a/app/assets/components/subpages/oj-submit-page.html
+++ b/app/assets/components/subpages/oj-submit-page.html
@@ -55,7 +55,7 @@
 
       submit:function(){
         if (this.paperValid)
-            this.fir('go', '/papers/' + this.paperFullId + '/preview');
+            this.fire('go', '/papers/' + this.paperFullId + '/preview');
       }
 
     })
