--- a/app/assets/components/oj-page-router.html
+++ b/app/assets/components/oj-page-router.html
@@ -30,6 +30,8 @@
 
             <app-route path="/review/:paper_id" element='oj-review-page'></app-route>
             <app-route path='/papers/:paper_id/preview' element='oj-paper-preview'></app-route>
+
+            <app-route path='*' element='oj-404-page'></app-route>
         </app-router>
 
     </template>
