--- a/app/assets/components/mixins/oj-url-helpers.html
+++ b/app/assets/components/mixins/oj-url-helpers.html
@@ -58,8 +58,12 @@
             return "/api/papers/"+paper.sha+"/annotations/" + annotation.id + "/" + state;
         },
 
+        paperCompletePath: function(paper){
+            return  paper && "/api/papers/"+paper.sha+"/complete";
+        },
+
         paperTransitionPath: function(paper, transition){
-          return  paper && "/api/papers/"+paper.sha+"/transition?transition=" + transition ;
+          return  paper && "/api/papers/"+paper.sha+"/transition?transition=" + transition;
         }
 
     };
