Show review status to editors

--- a/app/assets/components/polymer-components.html
+++ b/app/assets/components/polymer-components.html
@@ -19,6 +19,7 @@
  *= require paper-spinner/paper-spinner
  *= require paper-button/paper-button
  *= require paper-button/paper-button
+ *= require paper-checkbox/paper-checkbox
  *= require paper-input/paper-input
  *= require paper-input/paper-autogrow-textarea
  *= require paper-item/paper-item
